assets/css/style.css
body {
	background: #474747;
}

.portrait_cont {
	margin-left: auto;
    margin-right: auto;
    width: 25em
}

.portrait {
	max-width: 100%;
}

.header {
	background: white; /* For browsers that do not support gradients */
    background: -webkit-linear-gradient(#f7f4f4, #e2e2e2); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(#f7f4f4, #e2e2e2); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(#f7f4f4, #e2e2e2); /* For Firefox 3.6 to 15 */
    background: linear-gradient(#f7f4f4, #e2e2e2); /* Standard syntax */
    border-bottom: 9px solid black;
}

#title {
	color: #606060;
}

#nav_bar {
	margin-top: 15px;
}

.nav_element {
	padding-right: 20px;
}

.main_section {
	margin-top: 30px;
	margin-left: 20px;
	background: #e9fc3a;
	padding: 15px;
	border: 3px solid black;
	border-radius: 6px;
	margin-right: 20px;
}

p {
	font-family: 'Slabo 27px', serif;
}

.signature {
	font-family: 'Pacifico', cursive;
}

p::first-letter {
    font-size: x-large;
}

.letter {
	background: #dbdbdb;
	border-radius: 10px;
	margin-top: 15px;
}

#Twitter_logo {
	margin-left: auto;
    margin-right: auto;
    width: 4em
}

#Twitter_logo:hover {
	filter: invert(100%);
}

#social_connect {
	background: #e9fc3a;
	margin-top: 30px;
	margin-left: 20px;
	margin-right: 20px;
	padding-left: 13px;
	padding-bottom: 13px;
	border: 3px solid black;
	border-radius: 6px;
	padding-right: 16px;
	animation-name: fly_in_right;
	animation-duration: 4s;


}

#social_connect:hover {
	animation-name: section_hover;
	animation-duration: 4s;
}

.text_box {
	border: 3px solid black;
	border-radius: 6px;
	background: #e9fc3a;
	margin-top: 30px;
	margin-left: 20px;
	margin-right: 20px;
	padding-left: 13px;
	padding-bottom: 9px;
	padding-top: 9px;
	padding-right: 16px;
	text-align: center;
	animation-name: fly_in_right;
	animation-duration: 4s;
}

.text_box:hover {
	animation-name: section_hover;
	animation-duration: 4s;
}

#foot {
	border-top: 3px solid black;
	background: #e9fc3a;
	margin-top: 30px;
	padding-bottom: 9px;
	padding-top: 9px;
	text-align: center;	
}

#foot:hover {
	animation-name: section_hover;
	animation-duration: 4s;
}

#social_compon {
	margin-left: auto;
    margin-right: auto;
    width: 4em
}

h1 {
	border: 6px solid black;
	padding: 10px 10px 10px 10px;
	text-align: center;
}

h1:hover {
	animation-name: header_inverse;
    animation-duration: 4s;
}

@keyframes header_inverse {
    from {
    		background-color: black;
    		color: white;
    	}
    to {
    	background-color: inherit;
    	color: inherit;
    }
}

#greatest {
	animation-name: greatest_bold;
    animation-duration: 4s;
}

@keyframes greatest_bold {
    from {
    		font-size: 150%;
    	}
    to {
    	font-size: inherit;
    }
}

.main_section:hover {
	animation-name: section_hover;
	animation-duration: 4s;
}

@keyframes section_hover {
    from {
    		background-color: blue;
    		color: black;
    	}
    to {
    	background-color: red;
    }
}

@keyframes fly_in_right {
    from {
    		margin-left: 300px;
    	}
    to {
    	margin-left: inherit;
    }
}

.gallery_image {
	animation-name: expand;
	animation-duration: 4s;
}

@keyframes expand {
    from {
    		position: absolute;
    		top: 500px;
    	}
    to {
    	position: inherit;
    }
}

.gallery {
	margin-top: 30px;
}

#contact_form {
	margin-top: 30px;
}

#success_message{ display: none;}

